<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<EditText
		android:id="@+id/input_speed"
		android:layout_width="0dp"
		android:layout_height="45dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_velocity"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_velocity"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/input_time"
		android:layout_width="0dp"
		android:layout_height="42dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_time"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_height"
		app:layout_constraintStart_toStartOf="@+id/input_speed"
		app:layout_constraintTop_toBottomOf="@+id/input_speed" />

	<EditText
		android:id="@+id/input_distance"
		android:layout_width="0dp"
		android:layout_height="42dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_distance"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_distance"
		app:layout_constraintStart_toStartOf="@+id/input_time"
		app:layout_constraintTop_toBottomOf="@+id/input_time" />

	<Button
		android:id="@+id/btn_Velocity"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/name_calculate"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/unit_velocity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/unit_velocity"
		app:layout_constraintBottom_toBottomOf="@+id/input_speed"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/unit_height"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/unit_time"
		app:layout_constraintBottom_toBottomOf="@+id/input_time"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/unit_distance"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/unit_distance"
		app:layout_constraintBottom_toBottomOf="@+id/input_distance"
		app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>