<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<EditText
		android:id="@+id/input_density"
		android:layout_width="0dp"
		android:layout_height="45dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_density"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_height"
		app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

	<EditText
		android:id="@+id/input_mass"
		android:layout_width="0dp"
		android:layout_height="42dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_mass"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_density"
		app:layout_constraintStart_toStartOf="@+id/input_density"
        app:layout_constraintTop_toBottomOf="@+id/input_density"
        tools:targetApi="o" />

	<EditText
		android:id="@+id/input_volume"
		android:layout_width="0dp"
		android:layout_height="42dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:ems="10"
		android:hint="@string/name_volume"
		android:importantForAutofill="no"
		android:inputType="numberDecimal"
		app:layout_constraintEnd_toStartOf="@+id/unit_volume"
		app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_mass"
        tools:targetApi="o" />

	<Button
		android:id="@+id/btn_Density"
		android:layout_width="0dp"
		android:layout_height="48dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/name_calculate"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/unit_density"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/unit_density"
		app:layout_constraintBottom_toBottomOf="@+id/input_mass"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/unit_height"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/unit_mass"
		app:layout_constraintBottom_toBottomOf="@+id/input_density"
		app:layout_constraintEnd_toEndOf="parent" />

	<TextView
		android:id="@+id/unit_volume"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/unit_volume"
		app:layout_constraintBottom_toBottomOf="@+id/input_volume"
		app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>